--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "bmapconv"
-version = "1.0.0"
 edition = "2021"
 description = "BitMap(64位)轉換工具"
+build = "build.rs"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,3 +11,13 @@ regex = "1.10.4"
 lazy_static = "1.4"
 structopt = "0.3"
 colored = "2.0"
+
+[build-dependencies]
+vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }
+anyhow = "1.0.82"
+
+[profile.release]
+lto = true
+strip = true
+opt-level = "z"
+
