--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -26,17 +26,10 @@ jobs:
           use-cross: true
           command: build
           args: --target armv7-unknown-linux-gnueabihf
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # This token is provided by Actions, you do not need to create your own token
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@v2
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
-          body: |
-            Changes in this Release
-            - First Change
-            - Second Change
-          draft: false
-          prerelease: false    
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/*/bmapconv
+          asset_name: bmapconv
+          tag: ${{ github.ref }}
