--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,8 +27,12 @@ jobs:
           use-cross: true
           command: build
           args: --target armv7-unknown-linux-gnueabihf
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Open Web Client Directory
+        working-directory: target
+        run: |
+          ls -laR
+            - name: Upload binaries to release
+      - uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: target/armv7-unknown-linux-gnueabihf/release/bmapconv
