--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,3 +37,6 @@ jobs:
           file: target/armv7-unknown-linux-gnueabihf/release/bmapconv
           asset_name: bmapconv
           tag: ${{ github.ref }}
+
+# aarch64-unknown-linux-gnu x86_64-unknown-linux-gnu x86_64-pc-windows-gnu
+
