--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ regex = "1.10.4"
 lazy_static = "1.4"
 structopt = "0.3"
 colored = "2.0"
+encoding_rs = "0.8"
 
 [build-dependencies]
 vergen = { version = "8.3.1", features = ["build", "git", "gitcl"] }
